# RoverSIAFI

./: README.md
my_gazebo_plugins/: CMakeLists.txt  SimplePlugin.cpp  model_relocator_plugin.cpp  package.xml
pathfinder/: CMakeLists.txt  package.xml
pathfinder/config/: view_octomap_complete.rviz
pathfinder/description/: full_pathfinder.urdf  gazebo_control.xacro  gazebo_lidar.xacro  robot_core.xacro
pathfinder/gen_worlds_model/: blend_convert_to_obj.py  terreno.blend  terreno.blend1  world2oct.sh  world2oct_n_worlds.sh
pathfinder/launch/: generic_spawn_launch.py  init_environment_launch_all.py  init_environment_launch_no_create.py  init_gazebo_launch.py  n_bots_spawner.launch.py  single_bot_sim.launch.py
pathfinder/scripts/: AutoEncoderMaker.py  RoverNavEnv_multi.py  RoverNavEnv_multi_no_map.py  create_world_files.py  get_map_flatten.py  parser_tuple.py  remove_model.py  train_core_multi.py  trainer_manager.py  velocity_controller.py  velocity_controller_IA.py
pathfinder/worlds/: empty_world.world  skbot_custom.world
